4.Kubernetes/Kubernetes_Resources/Statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-statefulset
  labels:
    app: prometheus
spec:
  serviceName: "prometheus"  # Headless service for the StatefulSet
  replicas: 3
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          ports:
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: slow  # Specify your storage class
        resources:
          requests:
            storage: 5Gi
