4.Kubernetes/Kubernetes_Resources/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-prometheus-service
  namespace: default
  labels:
    app: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
