4.Kubernetes/Kubernetes_Resources/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-prometheus-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/cors-allow-headers: >-
      DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
spec:
  rules:
    - host: ananddevopsplatform.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-prometheus-service
                port:
                  number: 9090
